testdata/baselines/reference/compiler/protectedConstructorGenericCrash.errors.txt
protectedConstructorGenericCrash.ts(9,5): error TS2674: Constructor of class 'C' is protected and only accessible within the class declaration.


==== protectedConstructorGenericCrash.ts (1 errors) ====
    class C {
      protected constructor() {}
    }
    
    class B<T = any> extends C {}
    
    class A extends B {
      f() {
        new A();
        ~~~~~~~
!!! error TS2674: Constructor of class 'C' is protected and only accessible within the class declaration.
      }
    }